[gd_scene load_steps=4 format=3 uid="uid://0ctqkt7rh8rn"]

[ext_resource type="Script" path="res://ui/multiplayer/multiplayer_menu_home.gd" id="1_e1slr"]
[ext_resource type="PackedScene" uid="uid://vs38hxd3cm0b" path="res://ui/multiplayer/join_lobby_popup.tscn" id="2_liddj"]
[ext_resource type="PackedScene" uid="uid://bu0dec8p6tfym" path="res://ui/components/status_popup.tscn" id="3_i4o72"]

[node name="MultiplayerMenuHome" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1slr")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -33.0
offset_right = 93.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="StartLobbyButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Lobby"

[node name="JoinLobbyButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Lobby"

[node name="JoinLobbyPopup" parent="." instance=ExtResource("2_liddj")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_top = 0.0
offset_bottom = 0.0

[node name="JoiningLobbyStatusPopup" parent="." instance=ExtResource("3_i4o72")]
unique_name_in_owner = true
visible = false
layout_mode = 1
text = "Joining lobby..."

[connection signal="pressed" from="ButtonsContainer/JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="requested_to_join" from="JoinLobbyPopup" to="." method="_on_join_lobby_popup_requested_to_join"]
